--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="contactsApp">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<html lang="en" ng-app="WebAppMaker">
+<head>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <!-- Angular lib -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-route.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <!-- Create some padding for body -->
-    <style>
-      body {
-        min-height: 2000px;
-        padding-top: 70px;
-      }
-    </style>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="/js/app.js"></script>
-  </head>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
-  <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <div class="navbar-brand" href="#/">mLab Contact List</div>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">Home</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Dynamically render templates -->
-    <div class="container" ng-view>
-    </div>
-  </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+    <script src="app.js"></script>
+    <script src="config.js"></script>
+
+    <script src="views/user/login.controller.client.js"></script>
+    <script src="views/user/profile.controller.client.js"></script>
+    <script src="services/user.service.client.js"></script>
+
+    <script src="views/blog/blog-list.controller.client.js"></script>
+    <script src="views/blog/blog-new.controller.client.js"></script>
+    <script src="services/blog.service.client.js"></script>
+
+    <script src="views/weather/weather.controller.client.js"></script>
+    <script src="services/weather.service.client.js"></script>
+
+    <title>Hike 4000</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <script src="https://use.fontawesome.com/bfbb94cfc5.js"></script>
+    <script src="directives/wam-directives.js"></script>
+
+    <script src="js/textAngular-sanitize.min.js"></script>
+    <script src="js/textAngular-rangy.min.js"></script>
+    <script src="js/textAngular.min.js"></script>
+    <link rel="stylesheet" href="CSS/textAngular.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.2/jquery.ui.touch-punch.min.js"></script>
+
+    <link rel="shortcut icon" type="image/x-icon" href="http://www.clipartbest.com/cliparts/yio/M7n/yioM7nG6T.png" />
+</head>
+
+<body>
+<div ng-view></div>
+</body>
+
 </html>
