--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
     <script src="views/blog/blog-new.controller.client.js"></script>
     <script src="services/blog.service.client.js"></script>
 
-    <script src="views/weather/weather.controller.client.js"></script>
-    <script src="services/weather.service.client.js"></script>
+    <script src="views/catalog/catalog-list.controller.client.js"></script>
+    <script src="views/catalog/catalog-new.controller.client.js"></script>
 
-    <title>Hike 4000</title>
+    <title>Catalog System</title>
     <link rel="stylesheet" href="CSS/style.css">
     <script src="https://use.fontawesome.com/bfbb94cfc5.js"></script>
     <script src="directives/wam-directives.js"></script>
