Adding catalog Service

--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,9 @@
     <script src="views/user/profile.controller.client.js"></script>
     <script src="services/user.service.client.js"></script>
 
-    <script src="views/blog/blog-list.controller.client.js"></script>
-    <script src="views/blog/blog-new.controller.client.js"></script>
-    <script src="services/blog.service.client.js"></script>
-
     <script src="views/catalog/catalog-list.controller.client.js"></script>
     <script src="views/catalog/catalog-new.controller.client.js"></script>
+    <script src="services/catalog.service.client.js"></script>
 
     <title>Catalog System</title>
     <link rel="stylesheet" href="CSS/style.css">
